<resources>
    <string name="app_name">Pokedex</string>
    <string name="pikachu">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="type_electric">Eléctrico</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="alturapika">0.4m</string>
    <string name="pesopika">6.0kg</string>
    <string name="habilidadpika">Elec. Estática</string>
    <string name="habilidad">Habilidad</string>
    <string name="pikachu_description">Cuando se enfada, este Pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="arbok">Arbok N.º 0024</string>
    <string name="raichu">Raichu N.º 0026</string>
</resources>
